AccessDataProvider is complete. Many small bug fixed. All 504 unit tests now reliably pass

--- a/SubSonic.Tests/App.config
+++ b/SubSonic.Tests/App.config
@@ -8,15 +8,20 @@
   <connectionStrings>
     <add name="Northwind" connectionString="Data Source=.\SQLExpress; Database=northwind; Integrated Security=true;"/>
     <add name="Southwind" connectionString="Data Source=localhost; Database=Northwind; user id=root; password=;"/>
+    <add name="NorthwindAccess" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=DBScripts\Northwind.mdb" providerName="System.Data.OleDb"/>
   </connectionStrings>
   <dataConfiguration defaultDatabase="NorthwindConnection"/>
   <SubSonicService defaultProvider="Northwind" >
     <providers>
       <clear/>
+      <add name="Northwind" type="SubSonic.SqlDataProvider, SubSonic" connectionStringName="Northwind" generatedNamespace="Northwind"
+           enumIncludeList="^Categories$, ^Employees$, ^Products$, ^Region$, ^Shippers$, ^Suppliers$, ^Territories$" />
       <add name="Southwind" type="SubSonic.MySqlDataProvider, SubSonic" connectionStringName="Southwind" generatedNamespace="Southwind" />
-      <add name="Northwind" type="SubSonic.SqlDataProvider, SubSonic" connectionStringName="Northwind" generatedNamespace="Northwind" />
 	  <add name="NorthwindRepository" type="SubSonic.SqlDataProvider, SubSonic" connectionStringName="Northwind" generatedNamespace="NorthwindRepository" tableBaseClass="RepositoryRecord"/>
       <add name="SouthwindRepository" type="SubSonic.MySqlDataProvider, SubSonic" connectionStringName="Southwind" generatedNamespace="SouthwindRepository" tableBaseClass="RepositoryRecord"/>
+
+      <add name="NorthwindAccess" type="SubSonic.AccessDataProvider, SubSonic" connectionStringName="NorthwindAccess" generatedNamespace="NorthwindAccess"
+           enumIncludeList="^Categories$, ^Employees$, ^Products$, ^Region$, ^Shippers$, ^Suppliers$, ^Territories$" />
   </providers>
   </SubSonicService>
 </configuration>
