--- a/SubSonic/SubSonic.csproj
+++ b/SubSonic/SubSonic.csproj
@@ -180,6 +180,7 @@
     <Compile Include="SqlQuery\Delete.cs" />
     <Compile Include="SqlQuery\InlineQuery.cs" />
     <Compile Include="SqlQuery\OrderBy.cs" />
+    <Compile Include="SqlQuery\SqlGenerators\MSJetGenerator.cs" />
     <Compile Include="SqlQuery\SqlQueryBridge.cs" />
     <Compile Include="SqlQuery\SqlGenerators\ANSISqlGenerator.cs" />
     <Compile Include="SqlQuery\Insert.cs" />
