--- a/SubSonic/SubSonic.csproj
+++ b/SubSonic/SubSonic.csproj
@@ -94,8 +94,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\Interop.DAO.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>LoadTester\LoadTester\bin\Debug\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>LoadTester\LoadTester\bin\Debug\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ObjectBuilder">
+      <HintPath>LoadTester\LoadTester\bin\Debug\Microsoft.Practices.ObjectBuilder.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=5.0.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\MySql.Data.dll</HintPath>
@@ -181,6 +188,8 @@
     <Compile Include="SqlQuery\InlineQuery.cs" />
     <Compile Include="SqlQuery\OrderBy.cs" />
     <Compile Include="SqlQuery\SqlGenerators\MSJetGenerator.cs" />
+    <Compile Include="SqlQuery\SqlGenerators\MSSqlGenerator.cs" />
+    <Compile Include="SqlQuery\SqlGenerators\Sql2014Generator.cs" />
     <Compile Include="SqlQuery\SqlQueryBridge.cs" />
     <Compile Include="SqlQuery\SqlGenerators\ANSISqlGenerator.cs" />
     <Compile Include="SqlQuery\Insert.cs" />
